fix align

--- a/css/menu.css
+++ b/css/menu.css
@@ -1,11 +1,11 @@
 
 
 #nav-container{
-    width: 100%;
+    width: 60%;
     display: flex;
     justify-content: space-between;
+
+    padding-left: 20%;
+    padding-right: 20%;
 }
 
-#outer-nav{
-    
-}
